--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,19 +1,21 @@
 .hero-container .hero-wrapper {
-  max-width: unset;
   padding: 0;
 }
 
 .hero {
   position: relative;
-  padding: 40px 24px;
   min-height: 300px;
+  display: grid;
+  grid-template-columns: 1fr; 
+  max-width: 1440px;
 }
 
 .hero h1 {
-  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  color: var(--background-color);
+  color: var(--text-color);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .hero picture {
@@ -32,6 +34,16 @@
 
 @media (width >= 900px) {
   .hero {
-    padding: 40px 32px;
+    grid-template-columns: 351px 1fr;
   }
+
+  .hero h1 {
+    padding-left: 64px;
+  }
+}
+
+.hero .red-block {
+  background-color: #b20a08;
+  width: 351px;
+  height: 227px;
 }
