--- a/blocks/certifications/certifications.css
+++ b/blocks/certifications/certifications.css
@@ -1,43 +1,24 @@
-.columns > div {
-  display: flex;
-  flex-direction: column;
+.certifications h2  {
+  font-size: 64px;
+  line-height: 75px;
+  font-weight: 800;
+  margin-bottom: 40px;
 }
 
-.columns img {
-  width: 100%;
+.certifications p  {
+  text-align: center;
 }
 
-.columns > div > div {
-  order: 1;
-}
-
-.columns > div > .columns-img-col {
-  order: 0;
-}
-
-.columns > div > .columns-img-col img {
-  display: block;
-}
-
-.columns p {
-  margin: 0 auto;
+.certifications .icon  {
+  width: 90px;
+  height: 90px;
+  margin-left: 10px;
 }
 
 @media (width >= 900px) {
-  .columns > div {
-    align-items: center;
-    flex-direction: unset;
-    gap: 24px;
-  }
-
-  .columns > div > div {
-    flex: 1;
-    order: unset;
-  }
-
-  .columns p {
-    font-size: 36px;
-    line-height: 42.19px;
-    width: 432px;
-  }
+  .certifications .icon  {
+    margin-left: 20px;
+    width: 183px;
+    height: 183px;
+}
 }
