Set carousel width on p level

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -32,6 +32,10 @@
   min-height: min(50vw, calc(100dvh - var(--header-height)));
 }
 
+.carousel .carousel-slide p{
+    width: 600px
+}
+
 .carousel .carousel-slide:has(.carousel-slide-content[data-align='center']) {
   align-items: center;
 }
@@ -40,9 +44,6 @@
   align-items: flex-end;
 }
 
-.carousel .carousel-slide .carousel-slide-image {
-    width: 600px;
-}
 .carousel .carousel-slide .carousel-slide-image picture {
   position: absolute;
   inset: 0;
