--- a/blocks/inquiryform/inquiryform.css
+++ b/blocks/inquiryform/inquiryform.css
@@ -37,7 +37,8 @@
 }
 
 .inquiryform > div > div:nth-child(1) .inquiryContactsGroup {
-  display: flex;  
+  display: flex;
+  align-items: end;
 }
 
 .inquiryform > div > div:nth-child(1) .inquiryContactsWrapper {
@@ -85,6 +86,10 @@
   width: 55px;
 }
 
+.inquiryform #inquiry-more > div {
+  padding-bottom: 10px;
+
+}
 @media (width >= 900px) {
   .inquiryform > div > div:nth-child(2) { 
     margin-top: 10%;
@@ -105,5 +110,17 @@
     font-size: 36px;
     line-height: 42.19px;
     width: 432px;
+  }
+}
+
+
+@media (width <= 500px) {
+  .inquiryform .inquiry-form-col input {
+    width: 80%;
+  }
+
+  .inquiryform  #inquiryProductDescription {
+    width: 90%;
+    height: 130px;
   }
 }
