--- a/blocks/inquiryform/inquiryform.css
+++ b/blocks/inquiryform/inquiryform.css
@@ -1,3 +1,8 @@
+.inquiryform {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 .inquiryform > div {
   display: flex;
   flex-direction: column;
@@ -72,6 +77,11 @@
   width: 90%;
 }
 
+.inquiryform #inquiryGetMoreLabel {
+  padding: inherit;
+  display: inline-block;
+}
+
 .inquiryform #inquirySpecs label {
   padding: inherit;
   display: inline-block;
@@ -92,7 +102,7 @@
 }
 @media (width >= 900px) {
   .inquiryform > div > div:nth-child(2) { 
-    margin-top: 10%;
+
   }
 
   .inquiryform > div {
