--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,6 +79,9 @@ body {
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
   line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 body.appear {
@@ -145,6 +148,7 @@ pre {
 
 main > div {
   margin: 40px 16px;
+  flex: 1;
 }
 
 input,
